# TinyFPGA

./: .gitignore  Makefile  address_matcher.v  assign_mod.v  clb.v  clb_main.cpp  connect_box.v  connect_box_main.cpp  const_mod.v  design.v  gen_pe_tile.py  gen_switch_box.py  gen_top.py  generate_switch.py  generator_utils.py  io1_pad.v  io1_pad_main.cpp  io1in_pad.v  io1in_pad_main.cpp  io1out_pad_main.cpp  mux_4.v  pe_tile.v  pe_tile_bottom.v  pe_tile_bottom_left.v  pe_tile_bottom_main.cpp  pe_tile_bottom_right.v  pe_tile_left.v  pe_tile_main.cpp  pe_tile_right.v  pe_tile_top.v  pe_tile_top_left.v  pe_tile_top_right.v  run_generators.py  sb_config.v  slice.v  slice_mod.v  switch_box.v  switch_box_bottom.v  switch_box_bottom_left.v  switch_box_bottom_main.cpp  (+13 more)
place_and_route/: .gitignore  CMakeLists.txt
place_and_route/src/: algorithm.h  bitstream_format.cpp  bitstream_format.h  directed_graph.h  dynamic_bit_vector.h  json_utils.cpp  json_utils.h  place.cpp  place.h  pnr_main.cpp
place_and_route/test/: bitstream_converter_tests.cpp  place_tests.cpp  switch_box.json  top.json
track_design/: connect_box.v  gen_top.py  io1in_pad.v  io1out_pad.v  logic_block.v  pe_tile.v  run_generators.py  switch_box.v  switch_box_main.cpp  top.v  top_main.cpp
